# ailang-pbl

./: .gitignore  .pylintrc  AGENTS.md  AiLang.g4  AiLangBuiltinDfLib.py  AiLangFunc.py  AiLangLib.py  AiLangObj.py  AiLangSimpleAlgLib.py  AiLangType.py  Interpreter.py  LIB_GUIDE.md  README.md  Registry.py  build.sh  ci-checks.sh  functions.md  helloWorld.ail  main.py  pyproject.toml  run-test.sh  test.ail  test.df.ail  test.result  test2.ail  test2.result  test3.ail  test4.ail  utils.py
.github/workflows/: ci.yml
.zed/: debug.json
grammar/: AiLang.interp  AiLangLexer.interp  AiLangLexer.py  AiLangLexer.tokens  AiLangListener.py  AiLangParser.py  AiLangVisitor.py
