[project]
name = "ailang"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "antlr4-grun>=0.1.0",
    "antlr4-python3-runtime==4.13.2",
    "pandas>=3.0.2",
    "catboost",
    "scikit-learn>=1.8.0",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "pylint>=4.0.5",
    "pyright>=1.1.409",
]
